--- a/project3/prj3.css
+++ b/project3/prj3.css
@@ -12,7 +12,7 @@ h3 {
   margin-bottom: 10px;
 }
 
-img {
+.img {
   width: auto;
   height: 200px;
   border: 2px solid #003E1F;
@@ -50,5 +50,3 @@ img {
 .animal-card p {
   margin: 5px 0;
 }
-
-f
