--- a/project3/prj3.css
+++ b/project3/prj3.css
@@ -50,3 +50,12 @@ h3 {
 .animal-card p {
   margin: 5px 0;
 }
+
+
+.mud{
+  background: #ffffe0;
+  text-align: center;
+  list-style-position:inside;
+  justify-content: flex-start;
+   
+}
