--- a/project3/prj3.css
+++ b/project3/prj3.css
@@ -57,5 +57,13 @@ h3 {
   text-align: center;
   list-style-position:inside;
   justify-content: flex-start;
-   
+
+}
+
+.mud-2{
+  background: #ffffe0;
+  text-align: center;
+  list-style-position:inside;
+  justify-content: flex-end;
+
 }
