--- a/project3/prj3.css
+++ b/project3/prj3.css
@@ -56,7 +56,7 @@ h3 {
   background: #ffffe0;
   text-align: center;
   list-style-position:inside;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 
 .mud-2{
