--- a/finalprj/final.css
+++ b/finalprj/final.css
@@ -1,3 +1,16 @@
-.div{
-    height: 50;
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+}
+.banner h1 {
+    margin: 0;
+    font-size: 2em;
+}
+.banner img {
+    height: 40px; /* Adjust size of the logo */
+    width: auto;
 }
