--- a/finalprj/final.css
+++ b/finalprj/final.css
@@ -192,13 +192,13 @@ div {
 
   border: 4px solid #192A51;
 
-  background-color: greenyellow;
+  background-color: darkred;
 
   text-shadow: 2px 2px white;
 
   text-decoration: underline;
 
-  color: forestgreen;
+  color: red;
 
   text-align: center;
 
@@ -226,13 +226,13 @@ div {
 
   border: 4px solid #192A51;
 
-  background-color: darkgoldenrod;
+  background-color: blue;
 
-  text-shadow: 2px 2px darkorange;
+  text-shadow: 2px 2px darkblue;
 
   text-decoration: underline;
 
-  color: blue;
+  color: forestgreen;
 
   text-align: center;
 
@@ -260,13 +260,13 @@ div {
 
   border: 4px solid #192A51;
 
-  background-color: darkred;
+  background-color: darkgreen;
 
   text-shadow: 2px 2px black;
 
   text-decoration: underline;
 
-  color: red;
+  color: green;
 
   text-align: center;
 
