--- a/finalprj/final.css
+++ b/finalprj/final.css
@@ -128,13 +128,13 @@ div {
 
   border: 4px solid #192A51;
 
-  background-color: rgb( 159 , 237, 259);
+  background-color: brown;
 
   text-shadow: 2px 2px white;
 
   text-decoration: underline;
 
-  color: brown;
+  color: blanchedalmond;
 
   text-align: center;
 
