--- a/finalprj/final.css
+++ b/finalprj/final.css
@@ -119,11 +119,11 @@ div {
 
   background-color: brown;
 
-  text-shadow: 2px 2px white;
+  text-shadow: 2px 2px black;
 
   text-decoration: underline;
 
-  color: white;
+  color: black;
 
   text-align: center;
 
@@ -153,7 +153,7 @@ div {
 
   background-color: darkred;
 
-  text-shadow: 2px 2px white;
+  text-shadow: 2px 2px black;
 
   text-decoration: underline;
 
